media query for home section small screens, resolved some issues with body margin

--- a/app/assets/styles/modules/_home.css
+++ b/app/assets/styles/modules/_home.css
@@ -3,19 +3,21 @@
   &__img {
     display: flex;
 
-    @mixin atSmall {
-    border: 7px solid blue;
-    width: 50%;
-    height: 50%;
+    @add-mixin atSmall {
+      position: absolute;
+      opacity: .2;
+      transform: scale(.55);
 
     }
 
     @mixin atLarge {
-    justify-content: center;
-    align-items: center;
-    flex: 3;
-    transform: scale(.75);
-    }
+      position: relative;
+      opacity: 1;
+      justify-content: center;
+      align-items: center;
+      flex: 3;
+      transform: scale(.75);
+      }
   }
 
   &__title-container {
@@ -23,38 +25,62 @@
     flex-direction: column;
 
     @mixin atSmall {
-      margin-left: 1%;
+      justify-content: center;
+      align-items: flex-start;
+      padding: 0 5% 0 5%;
     }
 
     @mixin atLarge {
-
-    margin-left: 10%;
-    flex: 1;
-    flex-direction: column;
-    justify-content: center;
+      margin-left: 10%;
+      flex: 1;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
     }
   }
 
   &__heading {
     padding: 0;
     margin: 0;
-    font-size: 5rem;
     color: #FFF;
+
+    @mixin atSmall {
+      font-size: 4rem;
+    }
+
+    @mixin atLarge {
+      font-size: 5rem;
+    }
   }
 
   &__sub-heading {
-    display: flex;
     padding: 0;
     margin: 0;
-    font-size: 4rem;
     color: #00d8ff;
+
+    @mixin atSmall {
+      font-size: 3.5rem;
+    }
+
+    @mixin atLarge {
+      font-size: 4rem;
+    }
   }
 
   &__text {
-    font-size: 1rem;
-    padding: 0;
-    margin: 0;
     color: #FFF;
+
+    @mixin atSmall {
+      margin: 0 0 0 5px;
+      padding-top: 1%;
+      font-size: .8rem;
+    }
+
+    @mixin atLarge {
+      padding: 0;
+      margin: 0;
+      font-size: 1rem;
+    }
   }
 
 }
