--- a/app/assets/styles/modules/_main-container.css
+++ b/app/assets/styles/modules/_main-container.css
@@ -6,12 +6,15 @@
 
     @mixin atSmall {
     border: 5px solid red;
-    width: 100%;
     margin: 0;
     padding: 0;
-    height: auto;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
+    padding-top: 80px;
+    height: 800px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 
     }
 
@@ -27,6 +30,8 @@
     bottom: 0;
     transition: all .3s ease;
     overflow: hidden;
+    flex-direction: row;
+    padding-right: 150px;
   }
 }
 
@@ -34,7 +39,9 @@
     display: flex;
 
     @mixin atSmall {
-
+      border: 5px solid purple;
+      width: 100%;
+      height: 1000px;
     }
 
     @mixin atLarge {
